--- a/package.json
+++ b/package.json
@@ -12,18 +12,17 @@
     "start": "node dist/bundle",
     "test": "mocha -r ts-node/register test/*.spec.ts"
   },
-  "dependencies": {
-    "npm-run-all": "^4.1.3",
-    "webpack": "^4.16.5",
-    "webpack-cli": "^3.1.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/chai": "^4.1.4",
     "@types/mocha": "^5.2.5",
     "chai": "^4.1.2",
     "mocha": "^5.2.0",
+    "npm-run-all": "^4.1.3",
     "ts-loader": "^4.4.2",
     "ts-node": "^7.0.0",
-    "typescript": "^3.0.1"
+    "typescript": "^3.0.1",
+    "webpack": "^4.16.5",
+    "webpack-cli": "^3.1.0"
   }
 }
